# Internship_2022

./: README.md
Python_Task/: guess.py
Task2/src/: CMakeLists.txt  dynamic_array.h  main.cpp  unit_testing.cpp
Task3/src/: CMakeLists.txt  acunit.h  main_a.cpp  main_t.cpp  thermostat.h
cmake_course/: .gitignore  cmake_thread.txt  instr.txt
cpp_course/: main  main.cpp  refs_ptrs  refs_ptrs.cpp
cpp_course/Boost/src/: CMakeLists.txt  boosting.h  main.cpp
linux_course/: four.txt  prog.sh
